# Rubrica

./: .gitignore  Cargo.toml  README.md
rubrica-gtk/: Cargo.toml
rubrica-gtk/src/: app.rs  cover.rs  main.rs  qr.rs
rubrica-gtk/src/pages/: detail.rs  grid.rs  list.rs  mod.rs  reader.rs  settings.rs  stats.rs
rubrica-pdf-pipeline/: Cargo.toml
rubrica-pdf-pipeline/src/: assembler.rs  error.rs  extractor.rs  lib.rs  pipeline.rs  semantic.rs  xml_layout.rs
src/: analytics.rs  config.rs  gutencore.rs  lib.rs  library_db.rs  organizer.rs  pipeline.rs  sync.rs
