[package]
name = "rubrica-pdf-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdf-extract = "0.7"
gutencore = { workspace = true }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
tempfile = "3"
regex = "1.10"
tracing = "0.1"
roxmltree = "0.19"
zip = "2.1"
sanitize-filename = "0.5"

# OCR via ONNX Runtime (opcional)
ort = { version = "2.0.0-rc.12", optional = true }
image = { version = "0.25", optional = true }

[features]
default = []
ort-ocr = ["dep:ort", "dep:image"]

[dev-dependencies]
tokio-test = "0.4"
